cabal-version:      3.0
name:               claude-api
version:            0.1.0.0
synopsis:           Anthropic's Claude API client
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Kirill Valiavin
maintainer:         kvalyavin@ya.ru
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Anthropic.Claude.Types
                    , Anthropic.Claude.API
                    , Anthropic.Claude.Client
    other-modules:    Data.Aeson.Utils
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , aeson
                    , aeson-pretty
                    , data-default
                    , generic-lens
                    , http-client-tls
                    , text
                    , servant
                    , servant-client
                    , lens
    hs-source-dirs:   src
    default-language: GHC2021
